# WorkWay

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
workway/: main.py  typings.py
workway/core/: __init__.py  component.py  core.py  db_component.py  pages.py  subcores.py
workway/core/db/: __init__.py  column.py  db.py  operation.py  tables.py
workway/core/subcores/: __init__.py  base.py  main.py  money.py  settings.py  work.py
workway/gui/: base.py  validators.py
workway/gui/pages/: __init__.py  common.py  main.py  money.py  settings.py
workway/gui/pages/main/: __init__.py  controls.py  page.py  presentator.py  views.py
workway/gui/pages/money/: __init__.py  modals.py  page.py  tiles.py
