[tool.poetry]
name = "WorkWay"
version = "0.1.4"
description = "WorkWay."
authors = ["Anton Panteleev <mainsample@yandex.ru>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/StickKing/WorkWay"

[tool.poetry.dependencies]
python = "^3.10"
lildb = "^0.5.0"
flet = "^0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = ["ANN401", "I001", "PYI034"]

unfixable = [
    "F401",
    "PLR5501",
]

[tool.flet.flutter.pubspec.dependency_overrides]
file_picker = "8.1.4"
